--- a/template/task_index.html
+++ b/template/task_index.html
@@ -11,8 +11,9 @@
   <table>
   {{range .}}
     <tr>
-      <td>{{.Name}}</td>
+      <td>{{.Priority}}</td>
       <td>{{.Time}}</td>
+      <td>{{.Description}}</td>
     </tr>
   {{end}}
   </table>
