--- a/template/task_index.html
+++ b/template/task_index.html
@@ -14,6 +14,8 @@
       <td>{{.Priority}}</td>
       <td>{{.Time}}</td>
       <td>{{.Description}}</td>
+      <td>Done = {{.Done}}</td>
+      <td>Canceled = {{.Canceled}}</td>
     </tr>
   {{end}}
   </table>
