Fix asset path in view

--- a/template/login.html
+++ b/template/login.html
@@ -3,7 +3,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <script src="/assets/csrf.js"></script>
+  <script src="/assets/index.js"></script>
   <title>Mugil</title>
 </head>
 
