--- a/template/task_index.html
+++ b/template/task_index.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>Mugil</title>
+  <script src="/assets/index.js"></script>
 </head>
 
 <body>
@@ -44,7 +45,5 @@
 
     <input type="submit" value="Submit">
   </form>
-
-  <script src="/assets/csrf.js"></script>
 </body>
 </html>
