Use react in login form

--- a/template/login.html
+++ b/template/login.html
@@ -8,16 +8,6 @@
 </head>
 
 <body>
-  <form action="/login" method="POST">
-    <input type="hidden" name="CSRF_TOKEN">
-
-    <label for="email">Email</label>
-    <input type="input" name="email" id="email" placeholder="Email">
-
-    <label for="password">Password</label>
-    <input type="password" name="password" id="password" placeholder="Password">
-
-    <input type="submit" value="Login">
-  </form>
+  <div id='mugil-login'></div>
 </body>
 </html>
